static/src/css/main.css
/* ... */
.btn-icon-sidebar.btn-icon-sm.active {
	opacity: 1;
}

/* ==== BODY ==== */

.mail_inbox {
	grid-column: 2 / 3;
	grid-row: 2 / -1;

	overflow: hidden;
}

/* ==== MAIL ==== */

.inbox-menu {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row;
	flex-flow: row;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	height: 48px;
	width: auto;
	background-color: white;
	padding: 0 12px;
	border-bottom: 1px solid var(--fill-border);
	margin-right: 16px;
}

.inbox-container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-flow: column;
	flex-flow: column;
}

.inbox-menu-group {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row;
	flex-flow: row;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	vertical-align: middle;
	gap: 4px;
}

.toolbar-btn {
	width: 36px;
	height: 36px;
	border-radius: 18px;
	display: inline-flex;
	align-items: center;
	justify-content: center;
	padding: 0;
}

.toolbar-btn i {
	font-size: 15px;
	color: var(--light-grey);
}

.toolbar-btn:disabled {
	opacity: 0.35;
	cursor: default;
}

.open-mail-toolbar {
	margin-right: 0;
	padding-left: 0;
}

.inbox-btn-group {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	padding: 0;
}

.inbox-menu-pagination {
	font-family: var(--font);
	color: var(--light-grey);
	font-size: 0.75rem;
	margin-right: 12px;
	letter-spacing: 0.25px;
	margin: 0 6px;
}

.inbox-menu-pagination-btn {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
}

.inbox-menu-pagination-btn .btn-pagination {
	margin: 0;
}

.inbox-category {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-orient: horizontal;
	-webkit-box-direction: normal;
	-ms-flex-flow: row nowrap;
	flex-flow: row nowrap;
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	justify-content: flex-start;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	height: 56px;
	color: var(--light-grey);
	font-family: var(--font-sec);
	font-weight: 500;
	font-size: 0.875rem;
	letter-spacing: 0.25px;
	white-space: nowrap;
	border-bottom: 1px solid var(--fill-border);
	overflow: hidden;
	margin-right: 16px;
}

.inbox-category-item {
	position: relative;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	height: 56px;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: pointer;
	-webkit-box-flex: 0;
	-ms-flex: 0 1 251px;
	flex: 0 1 251px;
}

.inbox-category-title {
	margin-right: 18px;
	padding: 0;
}

.inbox-category-icon {
	margin-left: 16px;
	margin-right: 12px;

	-webkit-transition: opacity 350ms ease;

	-o-transition: opacity 350ms ease;

	transition: opacity 350ms ease;
}

.inbox-category-item:hover {
	background-color: var(--fill-hover);
	color: var(--black);
}

.inbox-category-item:hover .inbox-category-icon {
	opacity: 1;
}

.inbox-category-item.active {
	color: #7a539e;
}

.inbox-category-icon.active {
	fill: #7a539e;
	opacity: 1;
}

#ctg-primary.inbox-category-item.active::before {
	content: "";
	position: absolute;
	display: block;
	height: 4px;
	background-color: #7a539e;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	left: 0;
	right: 0;
	bottom: 0;
	margin: 0 8px;
}

/* ==== MAIL CONTENT ==== */

.mail-content {
	display: block;
	margin-bottom: 16px;
	overflow: hidden;
	overflow-y: scroll;
	height: 740px;
}

.mail {
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
	padding-bottom: 8px;
}

.inbox-message-item {
	position: relative;
	display: flex;
	padding: 8px 4px;
	align-items: center;
	gap: 8px;
	}

.inbox-message-item:hover {
	cursor: pointer;
	-webkit-box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
		0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
	box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0,
		0 1px 2px 0 rgb(60 64 67 / 30%), 0 1px 3px 1px rgb(60 64 67 / 15%);
	z-index: 1;
}

.inbox-message-item-options {
	display: flex;
}

.inbox-message-item-options * {
	margin: 0;
}
.img-container{
position:relative;
transition:all 0.3s linear;
padding:0px;
}

.hover-card{
position:absolute;
width:100%;
height:100%;
background-color:#0000003b;
top:0;
opacity:0;
right:0px;
display:flex;
justify-content:center;
align-items:center;
color:#fff;
font-size:2rem;
font-weight:bold;
}
.img-container:hover .hover-card{
opacity:1;
}

.message-default {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	font-family: var(--font);
	color: var(--light-grey);
	white-space: nowrap;
	overflow: hidden;
	overflow-x: hidden;
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.message-content {
	padding: 2px 8px 2px 0;
	line-height: 1.1;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

.gap.message-content {
	display: none;
	background: transparent;
	min-width: 0;

	-webkit-box-flex: 0;

	-ms-flex: 0;

	flex: 0;
}

.message-sender {
	color: var(--black);
	padding-right: 2rem;
	overflow: hidden;
	-o-text-overflow: ellipsis;
	text-overflow: ellipsis;

	-webkit-box-flex: 0;

	-ms-flex: 0 0 260px;

	flex: 0 0 260px;
}
/* ... */

